# effingo

./: .gitignore  Cargo.toml  README.md
src/: config.rs  copy_manager.rs  lib.rs  main.rs  waiting_animation.rs
