[package]
name = "effingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# I have a bad feeling about this librairy :)
# "the trait `std::error::Error` is not implemented for `lnk::Error`"
lnk = "0.5.1"

# Based on tips at https://nnethercote.github.io/perf-book/build-configuration.html
# To use add the flag --profile speed
# This is the most (or close to) optimised build config (* much more compile time)
# For about 1/4 better performances
# Takes about 3m to compile
[profile.speed]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"