[package]
name = "effingo"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
# I have a bad feeling about this librairy :)
# "the trait `std::error::Error` is not implemented for `lnk::Error`"
lnk = "0.5.1"
